# tree-sitter-core

./: Cargo.toml  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: tree-sitter-core.yml
src/: api.rs  capi.rs  get_changed_ranges.rs  language.rs  lexer.rs  lib.rs  node.rs  parser.rs  query.rs  reusable_node.rs  stack.rs  subtree.rs  tree.rs  tree_cursor.rs  treesitter.rs  util.rs
tests/: integration.rs
tests/integration_impl/: bindings.rs  error.rs  fixtures.rs  highlight.rs  loader.rs  mod.rs  parse.rs  test.rs  test_highlight.rs  tree_sitter_highlight.rs  util.rs
tests/integration_impl/bindings/: bindings.rs
tests/integration_impl/generate/: mod.rs  node_types.rs  npm_files.rs  parse_grammar.rs  render.rs
tests/integration_impl/tests/: corpus_test.rs  highlight_test.rs  mod.rs  node_test.rs  parser_test.rs  query_test.rs  test_highlight_test.rs  tree_test.rs
tests/integration_impl/tests/helpers/: dirs.rs  (+4 more)
tree-sitter-tests/: Cargo.toml
tree-sitter-tests/src/: bindings.rs  error.rs  fixtures.rs  highlight.rs  loader.rs  parse.rs  test.rs  test_highlight.rs  tree_sitter_highlight.rs  util.rs
tree-sitter-tests/src/generate/: mod.rs  render.rs
tree-sitter-tests/src/generate/build_tables/: item.rs
tree-sitter-tests/src/generate/prepare_grammar/: extract_tokens.rs
tree-sitter-tests/src/tests/: corpus_test.rs  highlight_test.rs  node_test.rs  parser_test.rs  query_test.rs  test_highlight_test.rs  tree_test.rs
tree-sitter-tests/src/tests/helpers/: fixtures.rs  scope_sequence.rs
tree-sitter-tests/src/tree_sitter_highlight/: c_lib.rs
(+17 files in other folders)
