[package]
name = "tree-sitter-core"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
c2rust-bitfields = "0.3"
libc = "0.2"

[workspace]
members = [
  "tree-sitter-tests"
]
