[package]
name = "tree-sitter-tests"
version = "0.1.0"
authors = ["Edoardo Morandi <morandidodo@gmail.com>"]
edition = "2018"

[dev-dependencies]
tree-sitter-core = { path = ".." }
ansi_term = "0.11"
cc = "1.0"
clap = "2.32"
difference = "2.0"
dirs = "2.0.2"
glob = "0.3.0"
lazy_static = "1.2.0"
libloading = "0.5"
once_cell = "1.3.1"
regex = "1"
regex-syntax = "0.6.4"
serde = "1.0"
serde_derive = "1.0"
smallbitvec = "2.3.0"
tiny_http = "0.6"
webbrowser = "0.5.1"
rand = "0.7.3"
spin = "0.5.2"
tempfile = "3.1.0"
libc = "0.2.67"
git2 = "0.13.0"
walkdir = "2.3.1"
which = "3.1.1"
rayon = "1.3.0"

[dev-dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dev-dependencies.log]
version = "0.4.6"
features = ["std"]
